safari fix for input group button being 1px too tall

--- a/src/styles/_input-group.scss
+++ b/src/styles/_input-group.scss
@@ -151,6 +151,9 @@
   // `font-size` in combination with `inline-block` on buttons.
   font-size: 0;
   white-space: nowrap;
+  // fix safari from being 1px too tall
+  height: $input-height;
+  overflow: hidden;
 
   // Negative margin for spacing, position for bringing hovered/focused/actived
   // element above the siblings.
